--- a/CharityCalculatorV2/CharityCalculatorV2/Views/Account/Login.cshtml
+++ b/CharityCalculatorV2/CharityCalculatorV2/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class=" col-md-4">
         <section>
-            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+            <form method="post">
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
