--- a/CharityCalculatorV2/CharityCalculatorV2/Views/Donor/Index.cshtml
+++ b/CharityCalculatorV2/CharityCalculatorV2/Views/Donor/Index.cshtml
@@ -20,6 +20,7 @@
                 <input type="radio" asp-for="EventType" value="@eventType" id="EventType@(eventType)"/> @eventType <br />
                 <!-- @Html.RadioButtonFor(model => model.EventType, eventType) @eventType -->
             }
+            <span asp-validation-for="EventType" class="text-danger"></span>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-default">Calculate</button>
