change donor post request to ajax

--- a/CharityCalculatorV2/CharityCalculatorV2/Views/Donor/Index.cshtml
+++ b/CharityCalculatorV2/CharityCalculatorV2/Views/Donor/Index.cshtml
@@ -27,3 +27,17 @@
         </div>
     </form>
 </div>
+
+<script>
+    $.ajax({
+        type: "POST",
+        url: '/Index',
+        data: {
+            model: Model
+        },
+        headers: {
+            RequestVerificationToken:
+                $('input:hidden[name="__RequestVerificationToken"]').val()
+        }
+    });
+</script>
